// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterMixin renderFilterOptionsFromChildren filterOption could be true as described in default value 1`] = `
<ul
  aria-activedescendant=""
  class="rc-menu rc-menu-vertical  rc-menu-root"
  role="menu"
  tabindex="0"
>
  <li
    aria-selected="false"
    class="rc-menu-item"
    role="menuitem"
    style="user-select:none;-webkit-user-select:none;"
    unselectable="unselectable"
  >
    1
  </li>
  <li
    aria-selected="false"
    class="rc-menu-item"
    role="menuitem"
    style="user-select:none;-webkit-user-select:none;"
    unselectable="unselectable"
  >
    2
  </li>
</ul>
`;

exports[`FilterMixin renderFilterOptionsFromChildren filters children by inputValue 1`] = `
<ul
  aria-activedescendant=""
  class="rc-menu rc-menu-vertical  rc-menu-root"
  role="menu"
  tabindex="0"
>
  <li
    aria-selected="false"
    class="rc-menu-item"
    role="menuitem"
    style="user-select:none;-webkit-user-select:none;"
    unselectable="unselectable"
  >
    1
  </li>
</ul>
`;

exports[`FilterMixin renderFilterOptionsFromChildren renders not found when search result is empty 1`] = `
<ul
  aria-activedescendant=""
  class="rc-menu rc-menu-vertical  rc-menu-root"
  role="menu"
  tabindex="0"
>
  <li
    aria-disabled="true"
    aria-selected="false"
    class="rc-menu-item-disabled rc-menu-item"
    role="menuitem"
    style="user-select:none;-webkit-user-select:none;"
    unselectable="unselectable"
  >
    not found
  </li>
</ul>
`;

exports[`FilterMixin renderFilterOptionsFromChildren renders options correctly 1`] = `
<ul
  aria-activedescendant=""
  class="rc-menu rc-menu-vertical  rc-menu-root"
  role="menu"
  tabindex="0"
>
  <li
    class=" rc-menu-item-group"
  >
    <div
      class="rc-menu-item-group-title"
    >
      group1
    </div>
    <ul
      class="rc-menu-item-group-list"
    >
      <li
        aria-selected="false"
        class="rc-menu-item"
        role="menuitem"
        style="user-select:none;-webkit-user-select:none;"
        unselectable="unselectable"
      >
        1
      </li>
    </ul>
  </li>
</ul>
`;

exports[`FilterMixin renderFilterOptionsFromChildren tag mode renders search value when not fount 1`] = `
<ul
  aria-activedescendant=""
  class="rc-menu rc-menu-vertical  rc-menu-root"
  role="menu"
  tabindex="0"
>
  <li
    aria-selected="false"
    class="rc-menu-item"
    role="menuitem"
    style="user-select:none;-webkit-user-select:none;"
    unselectable="unselectable"
  >
    2
  </li>
  <li
    aria-selected="false"
    class="rc-menu-item"
    role="menuitem"
    style="user-select:none;-webkit-user-select:none;"
    unselectable="unselectable"
  >
    22
  </li>
</ul>
`;

exports[`FilterMixin renderFilterOptionsFromChildren tag mode renders unlisted item in value 1`] = `
<ul
  aria-activedescendant=""
  class="rc-menu rc-menu-vertical  rc-menu-root"
  role="menu"
  tabindex="0"
>
  <li
    aria-selected="false"
    class="rc-menu-item"
    role="menuitem"
    style="user-select:none;-webkit-user-select:none;"
    unselectable="unselectable"
  >
    1
  </li>
  <li
    aria-selected="false"
    class="rc-menu-item"
    role="menuitem"
    style="user-select:none;-webkit-user-select:none;"
    unselectable="unselectable"
  >
    2
  </li>
  <li
    aria-selected="false"
    class="rc-menu-item"
    role="menuitem"
    style="user-select:none;-webkit-user-select:none;"
    unselectable="unselectable"
  >
    3
  </li>
</ul>
`;

exports[`FilterMixin renderFilterOptionsFromChildren tag mode use filterOption 1`] = `
<ul
  aria-activedescendant=""
  class="rc-menu rc-menu-vertical  rc-menu-root"
  role="menu"
  tabindex="0"
>
  <li
    aria-selected="false"
    class="rc-menu-item"
    role="menuitem"
    style="user-select:none;-webkit-user-select:none;"
    unselectable="unselectable"
  >
    Red
  </li>
</ul>
`;
